# SXL2

./: .gitignore  CMakeLists.txt  README.md  audio_hint.c  audio_hint.h  climbing.db  db_manager.c  db_manager.h  elevator.db  global_vars.h  globals.c  index.html  pthread_compat.h  server.c  simulator.c  simulator.h  terminal.html  web_server.c  web_server.h
